--- a/.tmux.conf
+++ b/.tmux.conf
@@ -26,7 +26,7 @@ bind -n C-l run "($is_vim && tmux send-keys C-l) || \
                  tmux select-pane -R"
 
 bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
-set -g default-terminal "screen-256color"
+#set -g default-terminal "screen-256color"
 set -g default-terminal "xterm-256color"
 set-option -g mouse on
 set -g terminal-overrides 'xterm*:smcup@:rmcup@'
@@ -37,8 +37,6 @@ bind Escape copy-mode
 unbind p
 bind p paste-buffer
 
-bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
-bind-key -T copy-mode-vi 'y' send-keys -X copy-pipe-and-cancel 'reattach-to-user-namespac
 set -g status-right '#{cpu_bg_color} CPU: #{cpu_icon} #{cpu_percentage} | %a %h-%d %H:%M '
 #set -g status-right '#{gpu_bg_color} GPU: #{gpu_icon} #{gpu_percentage} | %a %h-%d %H:%M '
 #{ram}
