--- a/.tmux.conf
+++ b/.tmux.conf
@@ -26,10 +26,9 @@ bind -n C-l run "($is_vim && tmux send-keys C-l) || \
                  tmux select-pane -R"
 
 bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
-#set -g default-terminal "screen-256color"
 set -g default-terminal "xterm-256color"
 set-option -g mouse on
-set -g terminal-overrides 'xterm*:smcup@:rmcup@'
+#set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 
 # copy from vim
 unbind [
