--- a/.tmux.conf
+++ b/.tmux.conf
@@ -54,8 +54,8 @@ set -g status-interval 10     # redraw status line every 10 seconds
 bind -n C-l send-keys C-l \; run 'sleep 0.1' \; clear-history
 setw -g monitor-activity on
 set -g visual-activity on
-set -g pane-border-fg green
-set -g message-fg white
+set -g pane-border-style fg=green
+set -g message-style fg=white
 set -g message-bg black
 set -g message-attr bright
 set -g @plugin 'pwittchen/tmux-plugin-uptime'
