--- a/.tmux.conf
+++ b/.tmux.conf
@@ -28,7 +28,7 @@ bind -n C-l run "($is_vim && tmux send-keys C-l) || \
 bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 set -g default-terminal "xterm-256color"
 set-option -g mouse on
-#set -g terminal-overrides 'xterm*:smcup@:rmcup@'
+set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 
 # copy from vim
 unbind [
